[gd_scene load_steps=11 format=2]

[ext_resource path="res://Modules/menus/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Modules/menus/BtnSocial.tscn" type="PackedScene" id=2]
[ext_resource path="res://Modules/menus/options_menu_parts/AudioBusVolumeSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://Modules/menus/options_menu_parts/GraphicsSettingsContent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Modules/menus/options_menu_parts/SubtitlesEnable.gd" type="Script" id=5]
[ext_resource path="res://Modules/menus/utility/DefaultSelectControl.tscn" type="PackedScene" id=6]
[ext_resource path="res://Modules/menus/theming/basic_theme.tres" type="Theme" id=7]
[ext_resource path="res://Modules/menus/ui_sounds/UiSoundPack.tscn" type="PackedScene" id=8]
[ext_resource path="res://Modules/menus/options_menu_parts/ControlsSettingsPage.tscn" type="PackedScene" id=9]
[ext_resource path="res://Modules/menus/options_menu_parts/GameplayPageContent.tscn" type="PackedScene" id=10]

[node name="OptionsMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )
main_menu_path = "res://Modules/menus/MainMenu.tscn"
ui_sound_pack = ExtResource( 8 )

[node name="Tabs" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="OptionsCategories" type="PanelContainer" parent="."]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pages" type="TabContainer" parent="OptionsCategories"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 497.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
tabs_visible = false
use_hidden_tabs_for_min_size = true

[node name="Gameplay" type="PanelContainer" parent="OptionsCategories/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="GameplayPageContent" parent="OptionsCategories/Pages/Gameplay" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1013.0
margin_bottom = 483.0

[node name="Graphics" type="PanelContainer" parent="OptionsCategories/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="GraphicsSettingsContent" parent="OptionsCategories/Pages/Graphics" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1013.0
margin_bottom = 483.0

[node name="Audio" type="PanelContainer" parent="OptionsCategories/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="PanelContainer" type="CenterContainer" parent="OptionsCategories/Pages/Audio"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1013.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCategories/Pages/Audio/PanelContainer"]
margin_left = 100.0
margin_top = 148.0
margin_right = 911.0
margin_bottom = 334.0
custom_constants/separation = 12
alignment = 1

[node name="MasterVolumeSlider" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 811.0
margin_bottom = 21.0
alignment = 2
label_text = "composite"

[node name="SoundFXVolumeSlider" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 33.0
margin_right = 811.0
margin_bottom = 54.0
alignment = 2
audio_bus_index = 1
label_text = "sfx"

[node name="VoiceLinesVolumeSlider" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 66.0
margin_right = 811.0
margin_bottom = 87.0
alignment = 2
audio_bus_index = 2
label_text = "vo"

[node name="MusicVolumeSlider" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 99.0
margin_right = 811.0
margin_bottom = 120.0
alignment = 2
audio_bus_index = 3
label_text = "music"

[node name="MiscVolumeSlider" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 132.0
margin_right = 811.0
margin_bottom = 153.0
alignment = 2
audio_bus_index = 4
label_text = "misc"

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 811.0
margin_bottom = 186.0
alignment = 1

[node name="SubtitlesEnable" type="CheckBox" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 311.0
margin_right = 499.0
margin_bottom = 21.0
pressed = true
text = "options.sfx.subtitles"
script = ExtResource( 5 )

[node name="UiSoundPack" parent="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer/HBoxContainer/SubtitlesEnable" instance=ExtResource( 8 )]

[node name="Controls" type="PanelContainer" parent="OptionsCategories/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="ControlsSettingsPage" parent="OptionsCategories/Pages/Controls" instance=ExtResource( 9 )]
margin_bottom = 483.0

[node name="StreamInfo" type="PanelContainer" parent="OptionsCategories/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCategories/Pages/StreamInfo"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1013.0
margin_bottom = 483.0
custom_constants/separation = 10
alignment = 1

[node name="Label6" type="Label" parent="OptionsCategories/Pages/StreamInfo/VBoxContainer"]
margin_top = 179.0
margin_right = 1012.0
margin_bottom = 200.0
text = "options.streaminfo.general.header"
autowrap = true

[node name="Label" type="Label" parent="OptionsCategories/Pages/StreamInfo/VBoxContainer"]
margin_top = 210.0
margin_right = 1012.0
margin_bottom = 231.0
text = "options.streaminfo.general.body"
align = 1
autowrap = true

[node name="Control" type="Control" parent="OptionsCategories/Pages/StreamInfo/VBoxContainer"]
margin_top = 241.0
margin_right = 1012.0
margin_bottom = 241.0

[node name="Label5" type="Label" parent="OptionsCategories/Pages/StreamInfo/VBoxContainer"]
margin_top = 251.0
margin_right = 1012.0
margin_bottom = 272.0
text = "options.streaminfo.legal.header"
autowrap = true

[node name="Label7" type="Label" parent="OptionsCategories/Pages/StreamInfo/VBoxContainer"]
margin_top = 282.0
margin_right = 1012.0
margin_bottom = 303.0
text = "options.streaminfo.legal.body"
align = 1
autowrap = true

[node name="EngineInfo" type="PanelContainer" parent="OptionsCategories/Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCategories/Pages/EngineInfo"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1013.0
margin_bottom = 483.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer"]
margin_top = 135.0
margin_right = 1012.0
margin_bottom = 156.0
text = "options.engine.head"
align = 1
autowrap = true

[node name="BtnSocial" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 166.0
margin_right = 1012.0
margin_bottom = 198.0
text = "options.engine.godotweb"
icon = null
URI = "https://godotengine.org/"

[node name="Label2" type="Label" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer"]
margin_top = 208.0
margin_right = 1012.0
margin_bottom = 229.0
text = "options.engine.framework"
align = 1
autowrap = true

[node name="PanelContainer" type="PanelContainer" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer"]
margin_top = 239.0
margin_right = 1012.0
margin_bottom = 346.0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1011.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 21.0
text = "options.engine.addons.title"
align = 1

[node name="Link_PSX_Shaders" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 31.0
margin_right = 1010.0
margin_bottom = 63.0
text = "options.engine.addons.psx"
icon = null
URI = "https://github.com/WittyCognomen/godot-psx-shaders"

[node name="Link_PSX_Shaders_2" parent="OptionsCategories/Pages/EngineInfo/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 73.0
margin_right = 1010.0
margin_bottom = 105.0
text = "options.engine.addons.subtitles"
icon = null
URI = "https://github.com/QueenOfSquiggles/godot-dynamic-subtitles"

[node name="DangerZone" type="PanelContainer" parent="OptionsCategories/Pages"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCategories/Pages/DangerZone"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1013.0
margin_bottom = 483.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsCategories/Pages/DangerZone/VBoxContainer"]
margin_top = 230.0
margin_right = 1012.0
margin_bottom = 251.0
custom_constants/separation = 20
alignment = 1

[node name="BtnDeleteSaveData" type="Button" parent="OptionsCategories/Pages/DangerZone/VBoxContainer/HBoxContainer"]
margin_left = 131.0
margin_right = 349.0
margin_bottom = 21.0
text = "options.danger.delete_btn"

[node name="Label" type="Label" parent="OptionsCategories/Pages/DangerZone/VBoxContainer/HBoxContainer"]
margin_left = 369.0
margin_right = 881.0
margin_bottom = 21.0
rect_min_size = Vector2( 512, 0 )
text = "options.danger.delete_warning"
autowrap = true

[node name="BtnMainMenu" type="Button" parent="."]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "menu.return_to_main"

[node name="DefaultSelectControl" parent="BtnMainMenu" instance=ExtResource( 6 )]

[node name="UiSoundPack" parent="BtnMainMenu" instance=ExtResource( 8 )]

[connection signal="toggled" from="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer/HBoxContainer/SubtitlesEnable" to="OptionsCategories/Pages/Audio/PanelContainer/VBoxContainer/HBoxContainer/SubtitlesEnable" method="_on_SubtitlesEnable_toggled"]
[connection signal="pressed" from="OptionsCategories/Pages/DangerZone/VBoxContainer/HBoxContainer/BtnDeleteSaveData" to="." method="_on_BtnDeleteSaveData_pressed"]
[connection signal="pressed" from="BtnMainMenu" to="." method="_on_BtnMainMenu_pressed"]
